Repaired bugs and done some other things

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RPPdevs</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/stylesheet.css" rel="stylesheet">
   </head>
   <body>
+	<div id="preloader">
+		<div id="loading_icon"></div>
+	</div>
 	<main>
 		<section id="slide_1" style="background: green;">
 			<h1>Section 1</h1>
@@ -16,16 +18,16 @@
 		<section id="slide_2">
 			<h1>Section 2</h1>
 		</section>
-		<section id="slide_3" style="background: blue;">
+		<section id="slide_3"">
 			<h1>Section 3</h1>
 		</section>
-		<section id="slide_4" style="background: blue;">
+		<section id="slide_4"">
 			<h1>Section 4</h1>
 		</section>
-		<section id="slide_5" style="background: black;">
+		<section id="slide_5"">
 			<h1>Section 5</h1>
 		</section>
-		<section id="slide_6" style="background: black;">
+		<section id="slide_6"">
 			<h1>Section 6</h1>
 		</section>
 	</main>
@@ -35,7 +37,5 @@
 	<script src="js/underscore-min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
