--- a/index.html
+++ b/index.html
@@ -18,21 +18,20 @@
 		<section id="slide_2">
 			<h1>Section 2</h1>
 		</section>
-		<section id="slide_3"">
+		<section id="slide_3">
 			<h1>Section 3</h1>
 		</section>
-		<section id="slide_4"">
+		<section id="slide_4">
 			<h1>Section 4</h1>
 		</section>
-		<section id="slide_5"">
+		<section id="slide_5">
 			<h1>Section 5</h1>
 		</section>
-		<section id="slide_6"">
+		<section id="slide_6">
 			<h1>Section 6</h1>
 		</section>
 	</main>
 
-	
 	
 	<script src="js/underscore-min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
